--- a/src/components/CardCarousel/CardCarousel.css
+++ b/src/components/CardCarousel/CardCarousel.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px 0; /* Add padding to prevent cutoff */
+  height: 50vh;
 }
 
 .background-image {
@@ -30,18 +31,19 @@
   z-index: 1;
 }
 
-/* Active card information */
+/* Active card information for desktop */
 .active-card-info {
-  position: relative;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
   background: rgba(0, 0, 0, 0.6);
   color: white;
   padding: 15px;
   border-radius: 8px;
-  max-width: 70%;
+  max-width: 30%; /* Adjusted width */
   z-index: 10;
   text-align: left;
-  min-height: 300px; /* Increased height */
-  margin-bottom: 20px; /* Space below the active card */
+  min-height: 30vh; /* Adjusted height */
 }
 
 /* Ensure links keep the same color when clicked or visited */
@@ -56,19 +58,21 @@
   color: var(--text-color); /* Keeps the same color */
 }
 
-/* Styles for small cards */
+/* Small cards container for desktop */
 .small-cards-container {
-  position: relative;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
   display: flex;
   gap: 10px;
   justify-content: center;
   z-index: 20;
-  margin-top: 20px; /* Space above small cards */
+  padding: 10px;
 }
 
 .small-card {
-  width: 175px; /* Proportional width */
-  height: 330px; /* Match the height of the active card */
+  width: 10vw; /* Proportional width */
+  height: 30vh; /* Match the height of the active card */
   border-radius: 8px;
   overflow: hidden;
   transition: border 0.3s ease;
@@ -113,6 +117,7 @@
     gap: 12px; /* Adjust gap between small cards */
     justify-content: center;
     flex-wrap: wrap;
+    padding: 10px;
   }
 
   .small-card {
@@ -125,6 +130,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 0;
+    height: auto;
   }
 }
 
