--- a/src/components/ServicesSections/ServicesPage.css
+++ b/src/components/ServicesSections/ServicesPage.css
@@ -59,7 +59,8 @@
 
 .services-header p {
   font-size: 1.2rem;
-  max-width: 60%;
+  max-width: 80%;
+  text-align: center;
 }
 
 /* Services Section */
@@ -184,20 +185,22 @@
   .services-header {
     flex-direction: column;
     padding: 20px;
+    align-items: flex-start; /* Fix align-items */
   }
 
   .services-header h1 {
     margin-bottom: 10px;
+    text-align: left; /* Ensure the text is aligned left */
   }
 
   .services-header p {
     max-width: 100%;
-    text-align: center;
+    text-align: left; /* Align text to the left on mobile */
   }
 
   .services-section {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start; /* Ensure content is aligned to the left */
   }
 
   .service {
